# ELEKTROZARYA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
source/: FileUtils.cpp  FileUtils.hpp  main.cpp
source/Render/: GraphicsResult.hpp  RenderSystem.cpp  RenderSystem.hpp  graphics_result.hpp  render_system.cpp  render_system.hpp
source/Render/Vulkan/: GraphicsPipeline.cpp  GraphicsPipeline.hpp  Utils.hpp  Vulkan.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDeviceMemoryManager.cpp  VulkanDeviceMemoryManager.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_device_memory_manager.cpp  vulkan_device_memory_manager.hpp  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
source/Render/Vulkan/Text/: Text.hpp
source/Scene/: Mesh.hpp  Scene.hpp
source/core/: config.hpp  file_utils.cpp  file_utils.hpp  log_assert.hpp  view.cpp  view.hpp
source/core/camera/: camera.cpp  camera.hpp
source/core/input/: input.cpp  input.hpp
source/core/scene/: material.cpp  material.hpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp  texture_sampler.cpp  texture_sampler.hpp  tiny_gltf_include.hpp
source/gameplay/: gameplay.cpp  gameplay.hpp
source/render/: config.hpp  graphics_result.hpp  render_system.cpp  render_system.hpp  vulkan_include.hpp
source/render/highlevel/: material.hpp  mesh.cpp  mesh.hpp  primitive.cpp  primitive.hpp  texture.cpp  texture.hpp
source/render/vulkan/: utils.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_buffer.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_device_memory_manager.hpp  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_pipeline_manager.cpp  vulkan_pipeline_manager.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_shader_compiler.cpp  vulkan_shader_compiler.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
source/shaders/: compile.sh  env_cubemap.frag  env_cubemap.vert  shader.frag  shader.vert  vert.spv
